[workspace]
members = [
    "element",
    "QLS/rustls-kyber",
    "QLS/rustls-fork",
    "Element.SDK",
    # "crates/crypto-pqc"  # add when vendored
]
resolver = "2"

[patch.crates-io]
rustls = { path = "QLS/rustls-fork" }

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
base64 = "0.22"
sha3 = "0.10"
hex = "0.4"
dashmap = "5"
parking_lot = "0.12"
prometheus = "0.13"
once_cell = "1.19"
rand = "0.8"
