[package]
name = "element-grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
prost-types = "0.11"
rand = "0.8"

[build-dependencies]
tonic-build = "0.9"
